ci: broader java.base opens for Groovy 2.5 (math, time, util.*)