@@ -52,10 +52,14 @@ test {
             '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
             '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
             '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.math=ALL-UNNAMED',
             '--add-opens=java.base/java.net=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
             '--add-opens=java.base/java.text=ALL-UNNAMED',
+            '--add-opens=java.base/java.time=ALL-UNNAMED',
             '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.regex=ALL-UNNAMED',
             '--add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED'
     testLogging {
         events 'passed', 'skipped', 'failed'
